Fixed button alignment by making the "Add" button slightly smaller

--- a/css/default.css
+++ b/css/default.css
@@ -126,7 +126,7 @@ button: hover{
 
 #button-add {
 	margin: auto;
-	width: 73%;
+	width: 72%;
 	background-color: #99CC00
 }
 	
